radix-transactions/tests/assets/manifest_parser_error_unexpected_eof_3.diag
error: unexpected end of file
  |
4 | ;
5 | 
6 | CALL_METHOD
7 |     Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
8 |     "some_method"
9 |     Address("基数引擎")
  |                        ^ unexpected end of file
  |